# poe-ai-try

./: pyproject.toml
tg-bot/: functions.py  main.py  questions.py
tg-bot/embedding/: embed.py
